# streetfight

./: .env.dev  .env.example  .env.prod  .env.traefik  .gitignore  .pre-commit-config.yaml  .pre-commit-search-and-replace.yaml  CLAUDE.md  Caddyfile  Dockerfile  Goals.txt  My lovely friends.md  README.md  arion-compose.nix  arion-pkgs.nix  asset-manifest.json  backend.nix  compose.traefik.yml  compose.watchtower.yml  compose.yaml  compose.yml  flake.nix  generate_all_images.sh  goals.txt  index.html  package-lock.json  package.json  pyproject.toml  requirements.in  setup.py  to_pdf.py  websocket plan.md
backend/: .items.py.swp  .model.py.swp  admin_auth.py  admin_interface.py  asyncio_triggers.py  circles.py  database.py  database_scope_provider.py  dotenv.py  generate_qr_items.py  image_processing.py  item_actions.py  items.py  locations.py  main.py  model.py  player.py  postprocess_shot_images.py  reset_db.py  setup.py  sse_event_streams.py  ticker.py  ticker_message_dispatcher.py  user_id.py  user_interface.py  utils.py
docs/: team_photo_identification_plan.md
old/: .gitignore  package-lock.json  package.json
react-ui/: package-lock.json  package.json
server/: index.js
src/: App.js  Crosshair.js  FireButton.js  ScanButton.js
tests/: conftest.py  sample_base64_image.txt  shared_fixtures.py  test_admin_auth.py  test_admin_mode.py  test_backend.py  test_chatgpt_items.py  test_circles.py  test_database.py  test_events.py  test_fixtures.py  test_identity_channels.py  test_identity_code.py  test_identity_decoder.py  test_identity_galois.py  test_items.py  (+10 more)
(+95 files in other folders)
